[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Options.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/menu/Click.wav" type="AudioStream" id=2]

[sub_resource type="InputEventKey" id=1]
scancode = 16777217

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -197.0
margin_top = -86.5
margin_right = 197.0
margin_bottom = 86.5
alignment = 1

[node name="GlobalVolume" type="Label" parent="VBoxContainer"]
margin_top = 19.0
margin_right = 394.0
margin_bottom = 33.0
text = "Global Volume"
align = 1

[node name="GlobalVolumeSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 37.0
margin_right = 394.0
margin_bottom = 53.0
max_value = 1.0
step = 0.05

[node name="Music" type="Label" parent="VBoxContainer"]
margin_top = 57.0
margin_right = 394.0
margin_bottom = 71.0
text = "Music Volume"
align = 1

[node name="MusicSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 75.0
margin_right = 394.0
margin_bottom = 91.0
max_value = 1.0
step = 0.05

[node name="SoundEffects" type="Label" parent="VBoxContainer"]
margin_top = 95.0
margin_right = 394.0
margin_bottom = 109.0
text = "Sound Effects Volume"
align = 1

[node name="SoundSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 113.0
margin_right = 394.0
margin_bottom = 129.0
max_value = 1.0
step = 0.05

[node name="BackButton" type="Button" parent="VBoxContainer"]
margin_top = 133.0
margin_right = 394.0
margin_bottom = 153.0
shortcut = SubResource( 2 )
text = "Back"

[node name="ClickAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SoundEffects"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="mouse_exited" from="VBoxContainer/GlobalVolumeSlider" to="." method="_on_GlobalVolumeSlider_mouse_exited"]
[connection signal="value_changed" from="VBoxContainer/GlobalVolumeSlider" to="." method="_on_GlobalVolumeSlider_value_changed"]
[connection signal="mouse_exited" from="VBoxContainer/MusicSlider" to="." method="_on_GlobalVolumeSlider_mouse_exited"]
[connection signal="value_changed" from="VBoxContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="mouse_exited" from="VBoxContainer/SoundSlider" to="." method="_on_GlobalVolumeSlider_mouse_exited"]
[connection signal="value_changed" from="VBoxContainer/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
